store timestamp for _NET_WM_CM_SX selection

https://bugzilla.gnome.org/show_bug.cgi?id=530702